# gates-detector

./: CMakeLists.txt  main.cpp
include/: GatesDescriptor.h  GatesDetector.h  ImgprocLogic.h  ImgprocLogicUtil.h  ImgprocPipeline.h  Utils.h
src/: GatesDescriptor.cpp  GatesDetector.cpp  ImgprocLogic.cpp  ImgprocLogicUtil.cpp  ImgprocPipeline.cpp  Utils.cpp
